[package]
name = "github_release"
version = "0.1.0"
edition = "2021"
description = "a"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "serde_json", "json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
