[package]
name = "gh_release"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Rust bindings for the github release HTTP API"

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "serde_json", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
git = [] # some git commands associated with releasing
